# pyledger

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.dev-override.yml  compose.yml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  sitecustomize.py  start_compose.sh  stop_compose.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/prompts/: add_dependency.prompt.md  git_confirm.prompt.md  run_checks.prompt.md  venv_activation.prompt.md
.github/skills/: ci-suggestions.skill.md  dependency-management.skill.md  run-checks.skill.md  (+2 more)
app/: Dockerfile.frontend  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
canon/: __init__.py  app.py  config.py  db.py  migration.py  tenancy.py
canonledger/: __init__.py  app.py  tenancy.py
docs/: Architecture.md  Style.md  TODO.md  db-relationships.md  payroll-spec.md
pyledger/: app.py  config.py  db.py
scripts/: clear_mypy_cache.sh  create_tenant_db.py  create_test_company_and_migrate.py  dev_local.sh  migrate_account_to_company_db.py  migrate_add_category_code.py  migrate_add_employee_payroll_tax_deductions.py  migrate_add_payroll_spec_columns.py  migrate_add_payroll_spec_unique.py  migrate_create_categories_table.py  migrate_drop_payroll_spec_name.py  migrate_tenant_add_timestamps.py  migrate_tenants.py  seed_all_payroll_specs.py  seed_categories.py  seed_payroll_spec.py  start_compose.sh  stop_dev.sh
static/: index.html
tests/: conftest.py  test_accounts_api.py  test_auth.py  test_clear_mypy_cache.py  test_company.py  test_company_duplicates.py  test_company_models.py  test_compose_db.py  test_currencies_api.py  test_currency_code_validation.py  test_currency_rate_provider.py  test_deduplicate.py  test_expense_ledger_flow.py  test_external_api.py  test_health.py  test_messages_headers.py  test_migrate_creates_tenant_dbs.py  test_model_table_creation.py  test_register_and_login_flow.py  test_register_duplicate.py  test_register_password_length.py  test_tenant_db_creation.py  utils.py
(+123 files in other folders)
