
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project dependencies are managed in requirements.txt (dynamic).
# Tools and deployment should read requirements.txt for runtime dependencies.

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "T", "B", "Q"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
python_files = "tests/*.py"
markers = ["integration: mark test as integration (slow, requires external services)", "compose: mark test that needs docker-compose resources"]
filterwarnings = [
  "ignore::DeprecationWarning:passlib.handlers.argon2",
]

# Mypy configuration: keep all type-checker settings in pyproject.toml.
[tool.mypy]
python_version = "3.14"
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
